--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-darkt bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-darkt bg-light h-82">
             <div class="container-fluid ">
-              <a class="navbar-brand">
-                Principe Fresco
-              </a>
+              <img src="imagenes/Príncipe fresco.png" alt="">
               <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <a class="navbar-brand link-light">SHOP</a>
-                <a class="navbar-brand link-light">COLLECTIONS</a>
+                <a class="navbar-brand link-dark">SHOP</a>
+                <a class="navbar-brand link-dark">COLLECTIONS</a>
               </div>
-              <a href="">icono 1</a>
-              <a href="">icono</a>
+              <div class="px-5">
+                <img class="mx-3" src="./imagenes/perfil.png" alt="">
+                <img class="mx-3" src="./imagenes/bolsa.png" alt="">  
+              </div>
             </div>
         </nav>
     </header>
@@ -121,7 +121,7 @@
         <a href="index.html"><img src="imagenes/loguito.png" id="logo" alt="Logo"  height="50"></a>
       <br>
       <br>
-      Creado por Yesenia Quejada Rojas - Luis Alfonso Corrales Marin
+      Andres Palma - Luis Alfonso Corrales Marin
       <br>
       <br>
         © 2021 Company, Inc
