Maquetacion grid productos Luis

--- a/index.html
+++ b/index.html
@@ -37,41 +37,46 @@
                 <!-- imagenes pequeñas -->
                 <div class="grid-colomn-items">
                     <div class="grid-item-pequeño">
-                        <img src="" alt="">
+                        <img src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630421820/Workshop%2031Agosto/Frame_16_babliz.png" alt="" style="width: 100px; margin: 20px;">
                     </div>
                     <div class="grid-item-pequeño">
-                        <img src="" alt="">
+                        <img src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630417970/Workshop%2031Agosto/Frame_14_y0u0da.png" alt=""  style="width: 100px; margin: 20px;">
                     </div>
                     <div class="grid-item-pequeño">
-                        <img src="" alt="">
+                        <img src="" alt=""  style="width: 100px; margin: 20px;">
                     </div>
                     <div class="grid-item-pequeño">
-                        <img src="" alt="">
+                        <img src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630417970/Workshop%2031Agosto/Frame_15_lbxmo0.png" alt=""  style="width: 100px; margin: 20px;">
                     </div>
                 </div>
                  <!-- imagen grande -->
                 <div class="grid-column-item">
                     <div class="gird-item-grande">
-                        <img src="" alt="">
+                        <img src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630421820/Workshop%2031Agosto/Frame_16_babliz.png" alt="" style="width: 500px; margin: 20px;">
                     </div>
                 </div>
             </div>
             <!-- opciones de carrito de compra -->
             <div class="grid-column-detalle">
                 <div class="nombre-producto">
-                    <h1></h1>
+                    <h1>Crown Sweatshirt</h1>
                 </div>
                 <div class="precio">
-                    <p></p>
+                    <p>$80.000</p>
                 </div>
                 <div class="tallas">
-                    <ul>
+                    <p>Size</p>
+                    <ul class="lista-tallas">
                         <li>S</li>
                         <li>M</li>
                         <li>L</li>
                         <li>XL</li>
                         <li>XXL</li>
                     </ul>
+                </div>
+                <div class="botones">
+                    <button class="btn1">ADD TO CART</button>
+                    <button class="btn2">BUY  IT NOW</button>
                 </div>
             </div>
         </div>
