--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
         
         <footer>
             <div class="pie-pagina">
-                <img src="./imagenes/Príncipe fresco.png" alt="">
+                <img class = "img1" src="./imagenes/Príncipe fresco.png" alt="">
+                <div><img class = "img2" src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630421638/Workshop%2031Agosto/Iconos/Vector_2_hjr3ze.png" alt=""></div>
+                <div><img class = "img3" src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630421638/Workshop%2031Agosto/Iconos/Vector_1_wyuxsg.png" alt=""></div>
             </div>
 
         </footer>
