--- a/carrito.html
+++ b/carrito.html
@@ -46,8 +46,11 @@
                     <th scope="col">Total</th>
                 </tr>
                 </thead>
-                <tbody id="items" style="color: white;"></tbody>
+                <tbody id="items" style="color: white;">
+                    <!-- por aqui se inserta el cuerpo -->
+                </tbody>
                 <tfoot style="color: white;">
+                    <!-- por aqui se inserta el footer -->
                 <tr id="footer">
                     <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
                 </tr>
@@ -56,7 +59,7 @@
 
         </div>
 
-        <footer>
+        <footer style="position: absolute; bottom: 0px;">
             <div class="pie-pagina">
                 <img class = "img1" src="./imagenes/Príncipe fresco.png" alt="">
                 <div class = "circulo"><img class = "img2" src="https://res.cloudinary.com/dobboq5dt/image/upload/v1630421638/Workshop%2031Agosto/Iconos/Vector_2_hjr3ze.png" alt=""></div>
@@ -146,10 +149,8 @@
             </div>
           </form>
     </template>
-    
-    
 
-
+  
     <script src="./script/index.js" type="module"></script>
 </body>
 </html>
