--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </div>
               <div class="px-5">
                 <a href=""><img class="mx-3" src="./imagenes/perfil.png" alt=""></a>
-                <a href="carrito.html"><img class="mx-3" src="./imagenes/bolsa.png" alt=""></a>  
+                <a href="/carrito.html"><img class="mx-3" src="./imagenes/bolsa.png" alt=""></a>  
               </div>
             </div>
         </nav>
